# telly-skout

./: .flatpak-manifest.yml  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  QmlFormat.cmake  README.md  org.kde.telly-scout.appdata.xml  org.kde.telly-scout.desktop  org.kde.telly-skout.appdata.xml  org.kde.telly-skout.desktop  snapcraft.yaml
.reuse/: dep5
android/: AndroidManifest.xml
android/res/drawable/: splash.xml
autotests/: CMakeLists.txt  databasetest.cpp  fetchertest.cpp  tvspielfilmfetchertest.cpp  xmltvfetchertest.cpp
autotests/data/tvspielfilmfetcher/: channels.html  description.html  empty.html  swr-page1.html  swr-page2.html
autotests/data/xmltvfetcher/: test.xml
benchmarks/: CMakeLists.txt  databasebenchmark.cpp  tvspielfilmfetcherbenchmark.cpp
benchmarks/data/tvspielfilmfetcher/: channels.html  description.html  empty.html  generator.py  swr.html
po/ar/: telly-skout.po
po/ast/: telly-skout.po
po/ca/: telly-skout.po
po/ca@valencia/: telly-skout.po
po/cs/: telly-skout.po
po/de/: telly-skout.po
po/en_GB/: telly-skout.po
po/eo/: telly-skout.po
po/es/: telly-skout.po
po/eu/: telly-skout.po
po/fi/: telly-skout.po
po/fr/: telly-skout.po
po/ga/: telly-skout.po
po/gl/: telly-skout.po
po/he/: telly-skout.po
po/hi/: telly-skout.po
po/hu/: telly-skout.po
po/ia/: telly-skout.po
po/it/: telly-skout.po
po/ja/: telly-skout.po
po/ka/: telly-skout.po
po/ko/: telly-skout.po
po/lt/: telly-skout.po
po/lv/: telly-skout.po
po/nl/: telly-skout.po
po/pl/: telly-skout.po
po/pt/: telly-skout.po
po/pt_BR/: telly-skout.po
po/ru/: telly-skout.po
po/sa/: telly-skout.po
po/sk/: telly-skout.po
po/sl/: telly-skout.po
po/sv/: telly-skout.po
po/tr/: telly-skout.po
po/ug/: telly-skout.po
po/uk/: telly-skout.po
po/zh_CN/: telly-skout.po
po/zh_TW/: telly-skout.po
src/: CMakeLists.txt  Messages.sh  TellyScoutSettings.kcfg  TellyScoutSettings.kcfgc  TellySkoutSettings.kcfg  TellySkoutSettings.kcfgc  channel.cpp  channel.h  channeldata.h  channelfactory.cpp  channelfactory.h  channelgroupsmodel.cpp  channelgroupsmodel.h  channelsmodel.cpp  channelsmodel.h  channelsproxymodel.cpp  channelsproxymodel.h  channelstablemodel.cpp  channelstablemodel.h  config-telly-skout.h.cmake  countriesmodel.cpp  countriesmodel.h  country.cpp  country.h  countrydata.h  countryfactory.cpp  countryfactory.h  database.cpp  database.h  dataprovider.h  entriesmodel.cpp  entriesmodel.h  entry.cpp  entry.h  feed.cpp  feed.h  feedgroupsmodel.h  feedsmodel.cpp  feedsmodel.h  feedsproxymodel.h  (+36 more)
src/qml/: AddChannelSheet.qml  AddFeedSheet.qml  ChannelDetailsPage.qml  ChannelGroupSheet.qml  ChannelListDelegate.qml  ChannelListPage.qml  ChannelTableDelegate.qml  ChannelTablePage.qml  CountryListDelegate.qml  CountryListPage.qml  EditChannelSheet.qml  EditFeedSheet.qml  EntryListDelegate.qml  EntryListPage.qml  EntryPage.qml  FavoritesPage.qml  FeedDetailsPage.qml  FeedGroupSheet.qml  FeedListDelegate.qml  FeedListPage.qml  GlobalDrawer.qml  GroupListDelegate.qml  GroupListPage.qml  GroupsListPage.qml  ProgramDelegate.qml  ProgramListDelegate.qml  ProgramListPage.qml  ProgramPage.qml  SelectFavoritesPage.qml  SettingsPage.qml  SortFavoritesPage.qml  TellySkoutGlobalDrawer.qml  main.qml
